# XGenProtocol

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  IMPLEMENTATION_GUIDE_ph1.md  JOURNAL.md  LICENSE  README.md  build.sh  push_to_github.bat
.cargo/: config.toml
docs/: about-new-protocol.md  about-new-protocol_en.md  about-new-protocol_sk.md  about-sustainability_en.md  about-sustainability_sk.md  brainstorm_v0.3.md  xgen_appendix_a_en.md  xgen_appendix_a_sk.md  xgen_appendix_b_en.md  xgen_appendix_b_sk.md  xgen_appendix_c_en.md  xgen_ch0_content.md  xgen_ch1_philosophy.md  xgen_ch2_architecture.md  xgen_ch3_specification.md  xgen_ch4_implementation.md  xgen_ch5_protocol.md  xgen_ch6_client_design.md
docs/backup/: xgen_ch0_content.md  xgen_ch1_philosophy.md  xgen_ch2_architecture.md  xgen_ch3_specification.md  xgen_ch4_implementation.md  xgen_ch5_protocol.md  xgen_protocol_brainstorm_0_6.md
docs/docs/: xgen_ch5_protocol.md
docs/docs/backup/: xgen_ch0_content.md  xgen_ch1_philosophy.md  xgen_ch4_implementation.md  xgen_protocol_brainstorm_0_7.md  xgen_protocol_brainstorm_0_7.md.bak
xgen-client/: Cargo.toml
xgen-client/src/: identity.rs  lib.rs  main.rs
xgen-common/: Cargo.toml  build.rs
xgen-common/src/: build_info.rs  lib.rs
xgen-node/: Cargo.toml
xgen-node/src/: lib.rs  main.rs
xgen-node/src/crypto/: encoding.rs  hashing.rs  mod.rs  signing.rs
xgen-node/src/identity/: keypair.rs  mod.rs
xgen-node/src/wire/: canonical.rs  mod.rs
