[package]
name = "xgen-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xgennode"
path = "src/main.rs"

[lib]
name = "xgennode_lib"
path = "src/lib.rs"

[dependencies]
xgen-common = { path = "../xgen-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
