[package]
name = "xgen-node"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "xgennode"
path = "src/main.rs"

[lib]
name = "xgennode_lib"
path = "src/lib.rs"

[dependencies]
xgen-common = { path = "../xgen-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
chacha20poly1305 = "0.10"
argon2 = "0.5"

[dev-dependencies]
tempfile = "3"
